Bug 423570 - Combo boxes should not have read-only state, patch=aaronlev, r=marco.zehe, a=beltzner